# rustcord

./: Cargo.toml  README.md
rustcord-sys/: Cargo.toml  build.rs
