[package]
name = "rustcord-sys"
version = "0.2.5"
authors = ["AregevDev <aregevdev@gmail.com>", "elenawinters <elenamaywinters@gmail.com>"]
edition = "2018"
description = "Raw FFI bindings for the Discord Rich Presence API"
keywords = ["discord", "rpc"]
repository = "https://github.com/elenawinters/rustcord"
categories = ["api-bindings"]
license = "Apache-2.0"
readme = "README.md"

[dependencies]

[build-dependencies]
bindgen = "0.56.0"
cmake = "0.1.42"
